name:                 aris-v2
version:              0.1
author:               Michael Tolly
maintainer:           miketolly@gmail.com
category:             Web
build-type:           Simple
cabal-version:        >= 1.10

library
  exposed-modules:
    Aris.Base
  other-modules:
  build-depends:
    base
    , HTTP
    , aeson
    , text
    , bytestring
    , transformers
  default-language:     Haskell2010
  ghc-options:          -Wall
  hs-source-dirs:       src
