name:                 aris-v2
version:              0.1
author:               Michael Tolly
maintainer:           miketolly@gmail.com
category:             Web
build-type:           Simple
cabal-version:        >= 1.10

library
  exposed-modules:
    Aris
    Aris.Base
    Aris.Types
    Aris.Games
    Aris.Users
    Aris.Media
  other-modules:
  build-depends:
    base
    , HTTP
    , aeson
    , text
    , bytestring
    , transformers
    , data-default
    , unordered-containers
  default-language:     Haskell2010
  ghc-options:          -Wall
  hs-source-dirs:       src
